Added Functionality: Enable auth api using swagger-ui
